# docs/swagger.json
@@ -38,19 +38,19 @@
                     "400": {
                         "description": "Invalid credentials or missing fields",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Error while parsing the request body",
+                        "schema": {
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Unexpected server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
-                        }
-                    },
-                    "502": {
-                        "description": "Error while parsing the request body",
-                        "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -76,7 +76,7 @@
                     "500": {
                         "description": "Unexpected server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -113,7 +113,7 @@
                     "500": {
                         "description": "Internal server error. This occurs if there is an unexpected error while fetching roles.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -153,19 +153,19 @@
                     "400": {
                         "description": "Bad Request. This occurs if 'roleName' or 'routes' are missing or invalid.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity. This occurs if the request body cannot be parsed.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error. This occurs if there is an unexpected error while creating the role.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -205,19 +205,19 @@
                     "400": {
                         "description": "Bad Request. This occurs if required fields are missing or invalid.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity. This occurs if the request body cannot be parsed.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error. This occurs if there is an unexpected error while updating permissions.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -254,16 +254,22 @@
                             "$ref": "#/definitions/models.ServiceResponse"
                         }
                     },
-                    "404": {
-                        "description": "Role not found or missing required fields. This occurs if either 'roleId' or 'roleName' is missing or invalid.",
+                    "400": {
+                        "description": "Bad Request. This occurs if either 'roleId' or 'roleName' is missing or invalid.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity. This occurs if the request body cannot be parsed.",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error. This occurs if there is an unexpected error while verifying the role.",
+                        "schema": {
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -294,13 +300,13 @@
                     "401": {
                         "description": "Unauthorized, invalid or missing authentication",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.UnauthorizedResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -340,22 +346,28 @@
                             "$ref": "#/definitions/models.ServiceResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad request, missing required fields",
+                        "schema": {
+                            "$ref": "#/definitions/models.BadRequestResponse"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized, invalid or missing authentication",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.UnauthorizedResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable entity, invalid input",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -392,16 +404,22 @@
                             "$ref": "#/definitions/models.ServiceResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad request, missing required fields",
+                        "schema": {
+                            "$ref": "#/definitions/models.BadRequestResponse"
+                        }
+                    },
                     "422": {
                         "description": "Unprocessable entity, invalid input",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -441,25 +459,25 @@
                     "400": {
                         "description": "Bad request, missing required fields",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict, password confirmation failed",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.ConflictResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable entity, invalid input",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -493,31 +511,31 @@
                     "200": {
                         "description": "User registered successfully",
                         "schema": {
-                            "$ref": "#/definitions/models.UserResponse"
+                            "$ref": "#/definitions/models.ServiceResponse"
                         }
                     },
                     "400": {
                         "description": "Bad request, missing required fields",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.BadRequestResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict, user already exists",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.ConflictResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable entity, invalid input",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -557,7 +575,7 @@
                     "401": {
                         "description": "Unauthorized, invalid or missing authentication",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.UnauthorizedResponse"
                         }
                     },
                     "404": {
@@ -569,7 +587,7 @@
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -618,10 +636,16 @@
                             "$ref": "#/definitions/models.ServiceResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad request, missing required fields",
+                        "schema": {
+                            "$ref": "#/definitions/models.BadRequestResponse"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized, invalid or missing authentication",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.UnauthorizedResponse"
                         }
                     },
                     "404": {
@@ -633,13 +657,13 @@
                     "422": {
                         "description": "Unprocessable entity, invalid input",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.StatusUnprocessableEntityResponse"
                         }
                     },
                     "500": {
                         "description": "Internal server error",
                         "schema": {
-                            "$ref": "#/definitions/models.ServiceResponse"
+                            "$ref": "#/definitions/models.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -652,6 +676,32 @@
             "properties": {
                 "role": {
                     "type": "string"
+                }
+            }
+        },
+        "models.BadRequestResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 400
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Bad request. Missing or invalid required fields."
+                }
+            }
+        },
+        "models.ConflictResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 409
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Conflict. Resource already exists or operation conflicts with current state."
                 }
             }
         },
@@ -669,6 +719,19 @@
                 }
             }
         },
+        "models.InternalServerErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 500
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Internal server error occurred."
+                }
+            }
+        },
         "models.ResetPasswordRequest": {
             "type": "object",
             "properties": {
@@ -681,11 +744,39 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 200
                 },
                 "data": {},
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Operation completed successfully"
+                }
+            }
+        },
+        "models.StatusUnprocessableEntityResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 422
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Invalid request body format. Please check your JSON syntax and field types."
+                }
+            }
+        },
+        "models.UnauthorizedResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 401
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Unauthorized access. Please provide valid authentication credentials."
                 }
             }
         },
@@ -747,14 +838,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
                     "type": "string"
                 }
             }
