# internal/controllers/auth.go
@@ -18,38 +18,29 @@ import (
 // @Produce      json
 // @Param        body  body      models.UserLoginRequest  true  "User login credentials"
 // @Success      200   {object}  responsemodels.ServiceResponse "JWT token and success message"
-// @Failure      400   {object}  responsemodels.ServiceResponse "Invalid credentials or missing fields"
-// @Failure      502   {object}  responsemodels.ServiceResponse "Error while parsing the request body"
-// @Failure      500   {object}  responsemodels.ServiceResponse "Unexpected server error"
+// @Failure      400   {object}  responsemodels.BadRequestResponse "Invalid credentials or missing fields"
+// @Failure      422   {object}  responsemodels.StatusUnprocessableEntityResponse "Error while parsing the request body"
+// @Failure      500   {object}  responsemodels.InternalServerErrorResponse "Unexpected server error"
 // @Router       /login [post]
 func (h *Handler) LoginUser(ctx *fiber.Ctx) error {
 	var req models.UserLoginRequest
 	err := ctx.BodyParser(&req)
 	if err != nil {
 		log.Println("Error in parsing the request Body" + err.Error())
-		return &responsemodels.ServiceResponse{
-			Code:    fiber.StatusUnprocessableEntity,
-			Message: "error while parsing the requestBody: " + err.Error(),
-		}
+		return UnprocessableEntity(ctx)
 	}
 	if req.Email == "" || req.Password == "" {
-		return &responsemodels.ServiceResponse{
-			Code:    fiber.StatusBadRequest,
-			Message: "Please check your credentials",
-		}
+		return BadRequest(ctx, "Please check your credentials")
 	}
 	if req.Role == "" {
-		return &responsemodels.ServiceResponse{
-			Code:    fiber.StatusBadRequest,
-			Message: "role should be provided",
-		}
+		return BadRequest(ctx, "role should be provided")
 	}
 	resp, err := h.AuthService.LoginUser(&req)
 	if err != nil {
 		if serviceErr, ok := err.(*responsemodels.ServiceResponse); ok {
 			return ctx.Status(serviceErr.Code).JSON(err)
 		} else {
-			return ctx.JSON(500, "an unexpected error occurred")
+			return InternalServerError(ctx, "Internal server error occurred."+"error: "+err.Error())
 		}
 	}
 	return ctx.Status(fiber.StatusOK).JSON(responsemodels.ServiceResponse{
@@ -66,7 +57,7 @@ func (h *Handler) LoginUser(ctx *fiber.Ctx) error {
 // @Tags         Auth
 // @Produce      json
 // @Success      200  {object}  responsemodels.ServiceResponse "Refreshed JWT token and success message"
-// @Failure      500  {object}  responsemodels.ServiceResponse "Unexpected server error"
+// @Failure      500  {object}  responsemodels.InternalServerErrorResponse "Unexpected server error"
 // @Router       /refresh-token [post]
 func (h *Handler) RefreshToken(ctx *fiber.Ctx) error {
 	claims := ctx.Locals("authClaims").(jwt.MapClaims)
@@ -77,7 +68,7 @@ func (h *Handler) RefreshToken(ctx *fiber.Ctx) error {
 		if serviceErr, ok := err.(*responsemodels.ServiceResponse); ok {
 			return ctx.Status(serviceErr.Code).JSON(err)
 		} else {
-			return ctx.JSON(500, "an unexpected error occurred")
+			return InternalServerError(ctx, "Internal server error occurred."+"error: "+err.Error())
 		}
 	}
 	return ctx.Status(fiber.StatusOK).JSON(responsemodels.ServiceResponse{
